--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
+
 body, html{
   height: 100%;
   margin: 0;
+  font-size: 0.875rem;
+}
+
+p{
+  font-family: "Roboto", sans-serif;
 }
 
 .bg-1, .bg-2 {
@@ -12,12 +19,12 @@ body, html{
 }
 
 .bg-1 {
-  background-image: url('imagen/01.jpg');
+  background-image: url('imagen/Mexico.jpg');
   min-height: 100%;
 }
 
 .bg-2 {
-  background-image: url('imagen/03.jpg');
+  background-image: url('imagen/Mexico\ Imp.jpg');
   min-height: 100%;
 }
 
